# lame-encoder

./: CMakeLists.txt  README.md
include/: LameEncoder.h  SimpleThreadPool.h  utils.h
src/: LameEncoder.cpp  SimpleThreadPool.cpp  main.cpp
